<?xml version="1.0"?>
<package format="2">
  <name>nuscenes2bag</name>
  <version>0.0.1</version>
  <description>Convert nuscenes dataset to rosbag</description>
  <maintainer email="clynamen@gmail.com">clynamen</maintainer>

  <license>MIT</license>
  <author email="clynamen@gmail.com">clynamen</author>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>opencv</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>opencv</build_export_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <export>
  </export>
</package>
